<resources>
    <string name="camera_setting">Camera</string>
    <string name="path_settings">System apps/Camera/Settings</string>
    <string name="search_settings">Camera settings;Quality;Image quality;Image location;Picture location;Face detection;Camera sound</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera"</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your device."</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="wait">Just a sec…</string>
    <string name="no_storage">Insert SD card before using camera</string>
    <string name="not_enough_space">Internal storage is full</string>
    <string name="preparing_sd">Checking internal storage…</string>
    <string name="access_sd_fail">"Couldn't access USB storage."</string>
    <string name="confirm_restore_title">Restore default settings</string>
    <string name="confirm_restore_message">"Restore Camera's default settings?"</string>
    <string name="confirm_location_title">Remember photo locations?</string>
    <string name="confirm_location_message">Tag your photos and videos with the locations where they are taken. Other apps can access this information along with your saved images.</string>
    <string name="confirm_location_alert">Remember photo locations</string>
    <string name="start_capture">OK</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Save location info</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_proximity_lock_title">Pocket mode</string>
    <string name="pref_camera_proximity_lock_summary">Lock touch gestures when placed in a pocket</string>
    <string name="screen_on_proximity_sensor_summary">"Don't cover the earphone area"</string>
    <string name="screen_on_proximity_sensor_hint">To turn this feature off, press the Volume up and Back buttons simultaneously.</string>
    <string name="pref_front_mirror_title">Mirror front camera</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_mi_front_video_quality_default">6</string>
    <string name="pref_mtk_video_quality_default">10</string>
    <string name="pref_video_quality_entry_value_4kuhd">8</string>
    <string name="pref_video_quality_entry_4kuhd">4K</string>
    <string name="pref_video_quality_entry_1080p">FULL HD</string>
    <string name="pref_video_quality_entry_720p">HD</string>
    <string name="pref_video_quality_entry_480p">SD</string>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">Interval of 0.06 seconds (2 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">Interval of 0.12 seconds (4 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">Interval of 0.3 seconds (10 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">Interval of 1 second (30 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">Interval of 2 seconds (60 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">Interval of 3 seconds (90 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">Interval of 4 seconds (120 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">Interval of 5 seconds (150 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">Interval of 8 seconds (240 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">Interval of 10 seconds (300 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">Interval of 15 seconds (450 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">Interval of 30 seconds (900 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1800">Interval of 60 seconds (1800 times)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_picturesize_entry_standard">Standard 4:3</string>
    <string name="pref_camera_picturesize_entry_fullscreen">Full screen 16:9</string>
    <string name="pref_camera_picturesize_entry_4208x3120">13M(4208x3120)</string>
    <string name="pref_camera_picturesize_entry_4208x2368">10M(4208x2368)</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8M(3264x2448)</string>
    <string name="pref_camera_picturesize_entry_3200x2400">8M(3200x2400)</string>
    <string name="pref_camera_picturesize_entry_3328x1872">6M(3328x1872)</string>
    <string name="pref_camera_picturesize_entry_3264x1840">6M(3264x1840)</string>
    <string name="pref_camera_picturesize_entry_3200x1800">6M(3200x1800)</string>
    <string name="pref_camera_picturesize_entry_3264x1836">6M(3264x1836)</string>
    <string name="pref_camera_picturesize_entry_2592x1944">5M(2592x1944)</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M(2048x1536)</string>
    <string name="pref_camera_picturesize_entry_1920x1088">2M(1920x1088)</string>
    <string name="pref_camera_picturesize_entry_1920x1080">2M(1920x1080)</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M(1600x1200)</string>
    <string name="pref_camera_picturesize_entry_1472x1104">1.6M(1472x1104)</string>
    <string name="pref_camera_picturesize_entry_1440x1080">1.6M(1440x1080)</string>
    <string name="pref_camera_picturesize_entry_1280x960">1.3M(1280x960)</string>
    <string name="pref_camera_picturesize_entry_1440x816">1.2M(1440x816)</string>
    <string name="pref_camera_picturesize_entry_1472x832">1.2M(1472x832)</string>
    <string name="pref_camera_picturesize_entry_1280x720">0.9M(1280x720)</string>
    <string name="pref_camera_picturesize_entry_1024x768">0.8M(1024x768)</string>
    <string name="pref_camera_jpegquality_value_high">high</string>
    <string name="pref_camera_jpegquality_value_normal">normal</string>
    <string name="pref_camera_jpegquality_value_low">low</string>
    <string name="pref_camera_jpegquality_default">@string/pref_camera_jpegquality_value_high</string>
    <string name="pref_camera_picture_format_entry_jpeg">Jpeg</string>
    <string name="pref_camera_picture_format_entry_raw">Raw</string>
    <string name="pref_camera_picture_format_value_jpeg">jpeg</string>
    <string name="pref_camera_picture_format_value_raw">raw</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_high">High</string>
    <string name="pref_camera_jpegquality_entry_normal">Standard</string>
    <string name="pref_camera_jpegquality_entry_low">Low</string>
    <string name="pref_camera_histogram_entry_enable">Turn on</string>
    <string name="pref_camera_histogram_entry_disable">Turn off</string>
    <string name="pref_camera_histogram_value_enable">enable</string>
    <string name="pref_camera_histogram_value_disable">disable</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_normal">Standard</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_entry_manual">Manual</string>
    <string name="pref_video_focusmode_title">Focus mode</string>
    <string name="pref_video_focusmode_entry_continuous">CAF</string>
    <string name="pref_video_focusmode_entry_auto">Tap</string>
    <string name="pref_video_focusmode_entryvalue_continuous">continuous-video</string>
    <string name="pref_video_focusmode_entryvalue_auto">auto</string>
    <string name="pref_video_focusmode_entryvalue_default">@string/pref_video_focusmode_entryvalue_continuous</string>
    <string name="pref_camera_focusmode_value_default">continuous-picture</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_flashmode_entry_torch">Torch</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_entry_manual">Manual</string>
    <string name="pref_camera_whitebalance_entry_measure">Measure</string>
    <string name="pref_camera_whitebalance_entryvalue_auto">auto</string>
    <string name="pref_camera_whitebalance_entryvalue_incandescent">incandescent</string>
    <string name="pref_camera_whitebalance_entryvalue_daylight">daylight</string>
    <string name="pref_camera_whitebalance_entryvalue_fluorescent">fluorescent</string>
    <string name="pref_camera_whitebalance_entryvalue_cloudy">cloudy-daylight</string>
    <string name="pref_camera_whitebalance_entryvalue_manual">manual</string>
    <string name="pref_camera_whitebalance_entryvalue_measure">measure</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_shader_coloreffect_default">0</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_coloreffect_entry_sepia" />
    <string name="pref_camera_coloreffect_entry_negative" />
    <string name="pref_camera_coloreffect_entry_posterize" />
    <string name="pref_camera_coloreffect_entry_aqua" />
    <string name="pref_camera_coloreffect_entry_instagram_clarendon">Color pop</string>
    <string name="pref_camera_coloreffect_entry_instagram_crema">Rustic</string>
    <string name="pref_camera_coloreffect_entry_vsco_f2">Matte</string>
    <string name="pref_camera_coloreffect_entry_vsco_a4">Analog</string>
    <string name="accessibility_camera_picker">Front and rear camera switch</string>
    <string name="accessibility_effect_mode_button">Effect button</string>
    <string name="accessibility_setting_button">Additional settings button</string>
    <string name="accessibility_mode_dismiss_button">Close Mode Selection button</string>
    <string name="camera_mode_options">Modes</string>
</resources>